# multi-lang-csv-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark.py  generate_report.py
deno-csv/: benchmark.json  benchmark.ts  import_npidata_csv.ts
meta/: benchmark.py  pyproject.toml  report-generate_html.py  report-update_readme.py
meta/lib/: __init__.py  benchmark_stats.py  templates.py
meta/templates/: README-table.md.jinja  report-horizontal.html.jinja  report.html.jinja
nodejs-csv/: benchmark.mjs  package.json
nodejs-fast-csv/: benchmark.json  benchmark.mjs  index.mjs  package.json
python-csv/: bench.py  benchmark.json  benchmark.py
results/: latest.html  latest.json
rust-csv/: Cargo.toml  benchmark.json
rust-csv/src/: main.rs
