[tool.poetry]
name = "multi-lang-csv-benchmark-meta"
version = "0.1.0"
description = "Scripts + other meta for Multi-Language CSV Benchmarks"
authors = ["Alex Wendland <me@alexwendland.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
